[gd_scene load_steps=12 format=3 uid="uid://co5t36kxokupn"]

[ext_resource type="Script" uid="uid://buu3b8gxsbyw3" path="res://scripts/mob/complex/slyph scripts/sylph_body_controller.gd" id="1_ar8do"]
[ext_resource type="Script" uid="uid://bxkd08xc2wfmu" path="res://scripts/mob/complex/slyph scripts/sylph_mind_fragmentary.gd" id="2_284ft"]
[ext_resource type="PackedScene" uid="uid://dp1v64jvcociq" path="res://models/glbs and textures/creatures/enemies/sylph/sylphheadPurple.glb" id="3_284ft"]
[ext_resource type="Script" uid="uid://bf3xq6wkexy62" path="res://scripts/mob/invenmanagers/invenManager_sylph.gd" id="4_v73jt"]
[ext_resource type="PackedScene" uid="uid://brs26wyrgtlx3" path="res://models/glbs and textures/creatures/enemies/sylph/sylphbodyPurple.glb" id="6_284ft"]
[ext_resource type="Script" uid="uid://3n3k3buhmy1a" path="res://scripts/mob/damsystem/complex_healthholder.gd" id="7_1raw2"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_a3el2"]
points = PackedVector3Array(4.33349, 1, 6.48339, 4.33349, -1, 6.48339, 6.14673e-08, -0.000195742, -2, 6.14673e-08, 1, 6.48339, 6.14673e-08, -1, 6.48339)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_audgy"]
points = PackedVector3Array(4.33349, 1, 6.48339, 4.33349, -1, 6.48339, 6.14673e-08, -0.000195742, -2, 6.14673e-08, 1, 6.48339, 6.14673e-08, -1, 6.48339)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_1ud71"]
points = PackedVector3Array(2.3, 1.7278, 6.48339, 2.3, 0, 6.48339, -0.000450373, 0, -2, -2.3, 1.7278, 6.48339, -2.3, 0, 6.48339)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_b8xb5"]
points = PackedVector3Array(2.3, 1.7278, 6.48339, 2.3, 0, 6.48339, -0.000450373, 0, -2, -2.3, 1.7278, 6.48339, -2.3, 0, 6.48339)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_avlhl"]
points = PackedVector3Array(0.302381, 1.16825, 0.0833119, -0.318254, -1.16825, -0.0626126, -0.318254, -1.16825, 0.0467396, -0.318254, 1.16825, -0.0626126, 0.156335, -1.16825, -0.281742, 0.0833119, -1.16825, 0.302381, -0.0991849, 1.16825, 0.302381, -0.0626126, 1.16825, -0.318254, 0.302381, -1.16825, 0.0833119, 0.229358, 1.16825, -0.245231, -0.245231, -1.16825, -0.245231, -0.245231, -1.16825, 0.229358, 0.192846, 1.16825, 0.265869, -0.245231, 1.16825, 0.229358, 0.302381, -1.16825, -0.0991849, -0.245231, 1.16825, -0.245231, -0.0626126, -1.16825, -0.318254, 0.265869, -1.16825, 0.192846, -0.0991849, -1.16825, 0.302381, 0.302381, 1.16825, -0.0991849, 0.0467396, 1.16825, -0.318254, 0.229358, -1.16825, -0.245231, -0.318254, 1.16825, 0.0467396, 0.0833119, 1.16825, 0.302381, 0.192846, -1.16825, 0.265869, 0.265869, 1.16825, 0.192846, 0.0467396, -1.16825, -0.318254, -0.281742, 1.16825, 0.156335, 0.156335, 1.16825, -0.281742, -0.281742, -1.16825, 0.156335)

[node name="prototype sylph" type="CharacterBody3D" groups=["damage_interactible", "has_manager", "player_interactible"]]
collision_layer = 7
script = ExtResource("1_ar8do")

[node name="sylph mind" type="Node" parent="."]
script = ExtResource("2_284ft")

[node name="sylph head v2" parent="." instance=ExtResource("3_284ft")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.37337, 0.0103455)

[node name="senses" type="Node3D" parent="sylph head v2"]
transform = Transform3D(-0.9, 0, 7.86805e-08, 0, 0.9, 0, -7.86805e-08, 0, -0.9, 1.91321e-08, 0.0157259, -0.218846)

[node name="vision" type="Node3D" parent="sylph head v2/senses"]

[node name="deadCenter" type="RayCast3D" parent="sylph head v2/senses/vision"]
transform = Transform3D(1, 1.57898e-14, 1.57898e-14, -1.57898e-14, -4.37114e-08, 1, 1.57898e-14, -1, -4.37114e-08, -2.32962e-15, 0, 0.147539)
target_position = Vector3(0, -25, 0)

[node name="triangleL" type="Area3D" parent="sylph head v2/senses/vision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.43929e-14, 0, 2.17817)

[node name="CollisionShape3D" type="CollisionShape3D" parent="sylph head v2/senses/vision/triangleL"]
transform = Transform3D(3, 0, 6.77626e-21, 0, 3, 0, -6.77626e-21, 0, 3, -6.3346e-14, 0, 4.01182)
shape = SubResource("ConvexPolygonShape3D_a3el2")
debug_color = Color(0.937255, 0.247059, 0, 1)

[node name="triangleR" type="Area3D" parent="sylph head v2/senses/vision"]
transform = Transform3D(-1, 8.74228e-08, -3.15797e-14, -8.74228e-08, -1, -1.38039e-21, -3.15797e-14, 1.38039e-21, 1, -3.43929e-14, 0, 2.17817)

[node name="CollisionShape3D" type="CollisionShape3D" parent="sylph head v2/senses/vision/triangleR"]
transform = Transform3D(3, 6.37731e-42, 6.77626e-21, 0, 3, -8.07794e-28, -6.77626e-21, -8.07794e-28, 3, -5.68434e-14, 0, 4.01182)
shape = SubResource("ConvexPolygonShape3D_audgy")
debug_color = Color(0.937255, 0.247059, 0, 1)

[node name="triangleU" type="Area3D" parent="sylph head v2/senses/vision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.43929e-14, 0, 2.17817)

[node name="CollisionShape3D" type="CollisionShape3D" parent="sylph head v2/senses/vision/triangleU"]
transform = Transform3D(3, 0, 6.77626e-21, 0, 3, 0, -6.77626e-21, 0, 3, -6.3346e-14, 0, 4.01182)
shape = SubResource("ConvexPolygonShape3D_1ud71")
debug_color = Color(0.384314, 0.611765, 0, 0.705882)

[node name="triangleD" type="Area3D" parent="sylph head v2/senses/vision"]
transform = Transform3D(-1, -8.74228e-08, -3.15797e-14, 8.74228e-08, -1, 1.38039e-21, -3.15797e-14, -1.38039e-21, 1, -3.43929e-14, 0, 2.17817)

[node name="CollisionShape3D" type="CollisionShape3D" parent="sylph head v2/senses/vision/triangleD"]
transform = Transform3D(3, -1.27546e-41, 0, 0, 3, 8.07794e-28, 0, 8.07793e-28, 3, -5.68434e-14, 0, 4.01182)
shape = SubResource("ConvexPolygonShape3D_b8xb5")
debug_color = Color(0.384314, 0.611765, 0, 0.705882)

[node name="sylphinventory" type="Node3D" parent="sylph head v2"]
transform = Transform3D(0.999999, 0, -2.38418e-07, 0, 0.999999, 0, 2.38418e-07, 0, 0.999999, -1.91454e-08, -0.0151474, 0.218998)
script = ExtResource("4_v73jt")

[node name="sylphcollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16596, 0)
shape = SubResource("ConvexPolygonShape3D_avlhl")

[node name="sylphmodel" parent="." instance=ExtResource("6_284ft")]
transform = Transform3D(-0.95, 0, -1.43446e-07, 0, 0.95, 0, 1.43446e-07, 0, -0.95, 0, 1.52737, 0)

[node name="COMPLEXHEALTHHOLDER" type="Node" parent="."]
script = ExtResource("7_1raw2")
metadata/_custom_type_script = "uid://3n3k3buhmy1a"
